--- a/test/index.html
+++ b/test/index.html
@@ -11,6 +11,6 @@
 <script src="lib/sinon.js"></script>
 <script src="../Promise.js"></script>
 <script src="http://code.jquery.com/qunit/qunit-1.11.0.js"></script>
-<script src="promise.js"></script>
+<script src="tests.js"></script>
 </body>
 </html>
